# doge-like

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeSettings_backup.json  README.md  README_old.md  doge-like.sln  doge-like.vcxproj  doge-like.vcxproj.filters
2d_game_engine/: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  dogelike  main.cpp
2d_game_engine.xcodeproj/: project.pbxproj
2d_game_engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
2d_game_engine.xcodeproj/xcshareddata/xcschemes/: 2d_game_engine.xcscheme
2d_game_engine.xcodeproj/xcuserdata/matthewmccord.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
2d_game_engine.xcodeproj/xcuserdata/matthewmccord.xcuserdatad/xcschemes/: xcschememanagement.plist
2d_game_engine/assets/tiles/: doggo_island_test1.map  doggo_island_test1.map.txt  map1.txt  p16x16.map
2d_game_engine/src/: AssetManager.h  Collision.cpp  Collision.h  Components.h  ECS.h  Game.cpp  Game.hpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.h  main.cpp
2d_game_engine/src/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  PositionComponent.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
aseprite_files/: ff_adventure_enemy.aseprite  ff_adventure_knight.aseprite  grass_and_wall.aseprite  grass_and_wall_with_borders.aseprite  player_knight.aseprite  some_clouds.aseprite  testing_tiles_draw_and_dont_overlap.aseprite
assets/maps/: tmw_desert.json  tmw_desert_map.json
assets/old_assets/tiles/: collision_map.txt
assets/tiles/: doggo_island_test1_full.txt  simple_1.map  some_clouds.json  test_exported_load_map.json  tiled-desert-test-32x32.json  tiled_test.json  tmw_desert.json
pyxel_files/: doggo-island-test1.pyxel  suburb_test.pyxel  water-dirt-grass.pyxel
src/: AssetManager.cpp  Camera.cpp  Camera.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Game.hpp  GameConstants.h  GameObject.cpp  Manager.cpp  Manager.h  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ECS/: Animation.cpp  Animation.h  ColliderComponent.cpp  ColliderComponent.h  ECS.cpp  ECS.h  KeyboardController.cpp  KeyboardController.h  ProjectileComponent.h  SpriteComponent.cpp  SpriteComponent.h  TileComponent.cpp  TileComponent.h  TransformComponent.cpp  TransformComponent.h
src/entities/: GameObject.cpp  GameObject.h
src/gfx/: AssetManager.cpp  AssetManager.h  TextureManager.cpp  TextureManager.h
src/maps/: LayerGroup.cpp  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  TileSet.cpp  TileSet.h
src/maps/backup_olds/: backup_Layer.h  backup_LayerGroup.h  backup_Map.h
src/maps/layers/: Layer.cpp  Layer.h  LayerGroup.cpp  LayerGroup.h  ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h
src/maps/tiles/: Tile.cpp  Tile.h  TileObject.cpp  TileObject.h  TileObjectGroup.cpp  TileObjectGroup.h  TileSheet.cpp  TileSheet.h  TileWithObjects.h
src/states/: GameState.cpp  GameState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
src/utils/: Collision.h  Layer.cpp  Layer.h  Map.cpp  Map.h  StringHelper.cpp  StringHelper.h  Vector2D.cpp  Vector2D.h
src/worlds/: World.cpp  World.h
tiled_doge_like/: doge_like.tiled-project  doge_like.tiled-session
tiled_doge_like/maps/: _first.tmx
tiled_doge_like/tilesets/: House_1.tsx
tiled_files/: doge_like.tiled-session  new-project.tiled-session
tiled_files/maps/: new-project-one.tmx  testerino.tmx
tiled_files/projects/layers_game/: layers-game.tiled-project  layers-game.tiled-session
tiled_files/projects/layers_game/maps/: one.tmx
tiled_files/tilesets/: grass_and_wall_with_borders.tsx  some_clouds.tsx  terrain_sheet_test1.tsx  tmw_desert_spacing.tsx
